[build-system]
requires = ["setuptools>=76", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "src/hera_pspec/_version.py"
parentdir_prefix_version = "hera_pspec-"
fallback_version  = "0.0.0"

[project]
name = "hera_pspec"
description = "HERA Power Spectrum Estimator Code"
authors = [
    {name="HERA Team"},
]
license = {file = "LICENSE"}
readme = "README.rst"
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13.0",
    "matplotlib>=3.8.0",
    "pyuvdata>=3.2.5",
    "astropy>=6.1.0",
    "pyyaml>=6.0.1",
    "h5py>=3.11.0",
    "uvtools>=0.2.0",
    "hera-calibration>=3.7.4",
    "typer>=0.12.0",
    "tqdm>=4.66.0",
    "typing-extensions>=4.5.0",
]
dynamic = ['version']
# Note that the restriction on 3.14 can be lifted once
# https://github.com/RadioAstronomySoftwareGroup/pyuvdata/pull/1659 is merged.
requires-python = ">=3.11,<3.14"

[project.urls]
Documentation = "https://hera-pspec.readthedocs.io/en/latest/"
Repository = "https://github.com/HERA-Team/hera_pspec"
Changelog = "https://github.com/HERA-Team/hera_pspec/releases"
Issues = "https://github.com/HERA-Team/hera_pspec/issues"

[dependency-groups]
docs = [
    "sphinx>=5.3.0",
    "sphinx_rtd_theme>=1.1.1",
    "readthedocs-sphinx-search>=0.1.1",
    "nbsphinx>=0.9.0",
    "ipython>=8.18.0",
    "sphinx_autorun>=2.0.0",
    "numpydoc>=0.8",
    "mock==1.0.1",
]
tests = [
    "coverage>=7.0",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-cases>=3.8.0",
]
dev = [
    {include-group = "docs"},
    {include-group = "tests"},
    "prek>=0.3.11",
]

[project.scripts]
pspec = "hera_pspec.cli:app"

[tool.setuptools]
# Doing this is discouraged, and we should package these CLI commands into the above
# `scripts` section.
script-files = [
    "scripts/pspec_run.py",
    "scripts/pspec_red.py",
    "scripts/bootstrap_run.py",
    "scripts/generate_pstokes_run.py",
    "scripts/auto_noise_run.py",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["hera_pspec*"]

[tool.setuptools.package-data]
hera_pspec = ["data/*", "data/**/*"]

[tool.setuptools.exclude-package-data]
"*" = ["**/__pycache__/**", "**/*.pyc"]

[tool.ruff]
line-length = 88
src = ["src", "tests", "scripts"]
extend-exclude = [
    "docs/_build",
    "build",
    "dist",
    "tests/Scalar_dev2.ipynb",  # Python 2 dev scratch notebook
]

[tool.ruff.lint]
# Include checks that already pass or almost pass; ignore any rule that fails
# with more than a few errors and defer cleanup to follow-up PRs. Counts below
# are post-`ruff check --fix` against this commit's working tree.
select = ["E", "W", "F"]
ignore = [
    "E501",   # line-too-long (1116) — defer to ruff format
    "E701",   # multi-statement on one line, colon (105)
    "E702",   # multi-statement on one line, semicolon (11)
    "E711",   # none-comparison (13)
    "E712",   # true-false-comparison (31)
    "E722",   # bare-except (12)
    "E741",   # ambiguous-variable-name (19) — `l`, `I`, `O` are scientific idioms
    "F401",   # unused-import (18) — includes legitimate __init__ re-exports
    "F841",   # unused-variable (74)
    "W291",   # trailing-whitespace (110) — handled by pre-commit
    "W293",   # blank-line-with-whitespace (68) — handled by pre-commit
    "E731",   # lambda-assignment (3 in example notebooks) — idiomatic in tutorials
]

[tool.pytest.ini_options]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts = "--cov hera_pspec --cov-config=.coveragerc --cov-report xml:./coverage.xml --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox",
]
testpaths = "tests"

[tool.ruff.format]
skip-magic-trailing-comma = true