# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = hera_pspec
description = HERA Power Spectrum Estimator Code
author = HERA Team
license = BSD
long_description = file: README.md
long_description_content_type = text/x-rst; charset=UTF-8
url = https://github.com/HERA-Team/hera_pspec
project_urls =
    Documentation = https://hera-pspec.readthedocs.io/en/latest/
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = OSX,Linux
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Science/Research
    License :: OSI Approved
    Natural Language :: English
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Astronomy

[options]
zip_safe = False
packages = find:
include_package_data = True
scripts =
    scripts/pspec_run.py
    scripts/pspec_red.py
    scripts/bootstrap_run.py
    scripts/generate_pstokes_run.py
    scripts/auto_noise_run.py
    
install_requires =
    numpy>=1.14
    scipy
    matplotlib>=2.2
    pyuvdata
    astropy>=2.0
    pyyaml
    h5py
    uvtools
    hera-calibration

[options.packages.find]
exclude =
    tests

[options.extras_require]
docs =
    sphinx>=1.8
    nbsphinx
    ipython
    sphinx_autorun
    numpydoc>=0.8
    nbsphinx
tests =
    coverage>=4.5.1
    pytest>=3.5.1
    pytest-cov>=2.5.1
dev =
    sphinx>=1.8
    numpydoc>=0.8.0
    nbsphinx
    ipython
    coverage>=4.5.1
    pytest>=3.5.1
    pytest-cov>=2.5.1

[tool:pytest]
# Options for py.test:
# Specify command line options as you would do when invoking py.test directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
addopts =
    --cov hera_pspec
    --cov-config=.coveragerc
    --cov-report xml:./coverage.xml
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = hera_pspec/tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
